--- a/index.html
+++ b/index.html
@@ -1,54 +1,59 @@
 <!DOCTYPE html>
 
 <html>
-<head>
-  <meta charset="utf-8">
-  <title>EXAMPLE</title>
-  <link rel="stylesheet" href="style.css"
+  <head>
+    <meta charset="utf-8" />
+    <title>EXAMPLE</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-
-
-
-
+    <div class="flex-container">
       <div class="first_box">
-        <p><b>Try it free for 7 days</b> then $20/month thereafter</p>
+        <p>Lead Capture Form</p>
 
-              <div class="second_box">
-                <p><input id="username" class='lf--input' placeholder='Enter First name' type='text' required></p>
-                <p><input id="username" class='lf--input' placeholder='Enter last name' type='text'  required></p>
-                <p><input id="username" class='lf--input' placeholder='Address' type='text' required></p>
-                <p><input id="username" class='lf--input' placeholder='Password' type='text' required></p>
-                <button type="submit">Start your free trial today</button>
-                <p>By clicking the button your agreeing our <a href="https://www.googleadservices.com/pagead/aclk?sa=L&ai=DChcSEwj7nauPkbr3AhUIfysKHdFuDfcYABABGgJzZg&ae=2&ohost=www.google.com&cid=CAESa-D2H-e8g7Mbm389wqpRdbQ_-eaQJySkF_DOk1xFlQj6OQaAN54kjiJGoWfwIQwqEJnSw0yMPRpNSzHg9W1DdNLFwts5QePh25HHKTNJWwn0c8Wfel3A-IfU6NLVKuTeIQhtBFOtUDNR2QY6&sig=AOD64_1Kmz_RwKK7919eljsrDkCkBfsHng&q&adurl&ved=2ahUKEwi__aOPkbr3AhVEIbcAHaXTBOQQ0Qx6BAgCEAE">terms and condtions</a></p>
-
-              </div>
+        <div class="second_box">
+          <p>
+            <input
+              id="username"
+              class="lf--input"
+              placeholder="Enter First name"
+              type="text"
+              required
+            />
+          </p>
+          <p>
+            <input
+              id="username"
+              class="lf--input"
+              placeholder="Email"
+              type="email"
+              required
+            />
+          </p>
+          <p>
+            <input
+              id="username"
+              class="lf--input"
+              placeholder="Subject"
+              type="subject"
+              required
+            />
+          </p>
+          <p>
+            <textarea
+              id="username"
+              class="lf--input"
+              placeholder="Message"
+              type="text"
+              required
+              rows="4"
+            ></textarea>
+          </p>
+          <button class="submit-btn" type="submit">
+            Start your free trial today
+          </button>
+        </div>
       </div>
-<!-- <br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br> --><div class="section1">
-      <h1><u>Learn to code by others watching</u></h1>
-      <p>See how experienced developers solve problems in real time.</p>
-      <p>Watching scripted tutorials is great, but undersatnding how </p>
-      <p>developers think is invaluable.</p>
-      <p></p>
-
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
   </body>
-  </html>
+</html>
