--- a/home.html
+++ b/home.html
@@ -1,1 +1,111 @@
+<!DOCTYPE html>
 
+<html>
+<div class="main">
+  <head>
+    <meta charset="utf-8">
+    <title>HOME page</title>
+    <link rel="stylesheet" href="style.css"
+    </head>
+    <body>
+      <nav>
+        <ul>
+          <li>
+            <a href="home.html">Home</a>
+          </li>
+          <li>
+            <a href="courses.html">Courses</a>
+          </li>
+          <li>
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </nav>
+<br>
+<br>
+      <div class="home_1">
+        <h3>Share Skills Training & Learning Solutions </h3>
+        <p>in association with</p>
+        <h1>VIBRANT ACADEMY FOR DLP STUDY CENTRE , KHARGAR</h1>
+
+
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="headAboutUs">
+        <p></p>
+        <h2>About Vibrant Academy</h2>
+
+      </div>
+      <br>
+      <div class="about_us">
+  <p>Share Skills is founded by Mr.Vaibhav Patil who has tremendous experience in Education & EdTech sector. This venture is also guided by and mentored by Dr.Vilas Nitnavare who is Principal in an Engineering College, Mumbai.
+    Share Skills is a well-known brand in Education & Skill Development & Vibrant Academy is top 10 brand in India, well known in Kota for its educational courses to qualify for both IIT JEE mains and Advance</p>
+    <p>Vibrant academy provides a platform to students to excel in the field of engineering.
+In today’s competitive scenario, it is quite evident to improve the level of awareness and imply the knowledge to the best concern.
+We believe that IIT-JEE aspirants should be devoted and dedicated towards the attainment of their goals, with a view to perform better and better.
+IIT-JEE is India’s most prestigious exam for engineering and for that one has to prepare oneself under the guidance and coaching by the finest minds.
+Vibrant academy firmly believes to deliver superior services in the field of IIT-JEE preparation.
+Our program is highly structured and designed appropriately to cope up with the present challenges.
+Intensive and rich content enables the students to understand and prepare themselves for the most prestigious exam in the country.
+We deliver comprehensive solutions to the masses in order to succeed in their respective field of engineering.
+Vibrant academy welcomes to all the students / prospective students to associate with us to transform your personality and build the character required to achieve specific objectives.</p>
+</div>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+        <div class="headContact">
+          <p></p>
+          <h2>You can Contact Us here </h2>
+
+        </div>
+        <br>
+        <div class="contact">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1849262.8241160489!2d74.73740133125!3d25.141050500000006!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x396f851f85083f45%3A0x62b0c0875d38dfaa!2sVibrant%20Academy%20(India)%20Pvt%20Ltd!5e0!3m2!1sen!2sin!4v1651393314337!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <br>
+          <br>
+
+
+        </div>
+        <br>
+        <br>
+        <div class="number">
+          <p>Contact number : 8484931669</p>
+
+        </div>
+
+        <br>
+        <br>
+        <br>
+        <br>
+
+
+      </body>
+</div>
+
+</html>
