style: add courses

--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -96,7 +96,7 @@
       <h1>Vibrant Academy</h1>
       <ul>
         <li>
-          <a href="/home.html">Home</a>
+          <a href="/">Home</a>
         </li>
         <li>
           <a href="/testimonial">Testimonials</a>
