--- a/results/index.html
+++ b/results/index.html
@@ -127,7 +127,7 @@
       <h1>Vibrant Academy</h1>
       <ul>
         <li>
-          <a href="/home.html">Home</a>
+          <a href="/">Home</a>
         </li>
         <li>
           <a href="/testimonial">Testimonials</a>
