--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>HOME page</title>
+    <title>Vibrant Academy</title>
     <link rel="stylesheet" href="style.css" />
 
     <meta
@@ -28,6 +28,61 @@
           </div>
         </div>
       </div>
+
+      <!--  -->
+
+      <div class="form-container">
+        <div class="container">
+          <form id="contact" action="" method="post">
+            <h3>Contact US</h3>
+            <fieldset>
+              <input
+                placeholder="Your name"
+                type="text"
+                tabindex="1"
+                required
+                autofocus
+              />
+            </fieldset>
+            <fieldset>
+              <input
+                placeholder="Your Email Address"
+                type="email"
+                tabindex="2"
+                required
+              />
+            </fieldset>
+            <fieldset>
+              <input
+                placeholder="Your Phone Number (optional)"
+                type="tel"
+                tabindex="3"
+                required
+              />
+            </fieldset>
+            <fieldset>
+              <textarea
+                placeholder="Type your message here...."
+                tabindex="5"
+                required
+              ></textarea>
+            </fieldset>
+            <fieldset>
+              <button
+                name="submit"
+                type="submit"
+                id="contact-submit"
+                data-submit="...Sending"
+              >
+                Submit
+              </button>
+            </fieldset>
+          </form>
+        </div>
+      </div>
+
+      <!--  -->
+
       <div class="home_1">
         <nav class="menu inactive">
           <h1>Vibrant Academy</h1>
@@ -40,6 +95,9 @@
             </li>
             <li>
               <a href="/results">Results</a>
+            </li>
+            <li>
+              <a href="/contact">Contact</a>
             </li>
           </ul>
 
