--- a/results/index.html
+++ b/results/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Results</title>
+    <title>Results | Vibrant Academy</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="../style.css" />
@@ -134,6 +134,9 @@
         </li>
         <li>
           <a href="/results">Results</a>
+        </li>
+        <li>
+          <a href="/contact">Contact</a>
         </li>
       </ul>
 
