--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Testimonials</title>
+    <title>Testimonials | Vibrant Academy</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
@@ -103,6 +103,9 @@
         </li>
         <li>
           <a href="/results">Results</a>
+        </li>
+        <li>
+          <a href="/contact">Contact</a>
         </li>
       </ul>
 
