fix: fix home contact modal & fix testimony view ports

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 
       <div class="form-container">
         <div class="container">
+          <div class="form-backdrop"></div>
           <form id="contact" action="" method="post">
             <h3>Contact US</h3>
             <fieldset>
@@ -72,7 +73,6 @@
                 name="submit"
                 type="submit"
                 id="contact-submit"
-                data-submit="...Sending"
               >
                 Submit
               </button>
