--- a/results/index.html
+++ b/results/index.html
@@ -77,9 +77,15 @@
         color: #fff;
         font-size: 24px;
       }
+      .table100.ver1 {
+        margin: 10px 40px;
+      }
       @media (max-width: 768px) {
         nav {
           padding-bottom: 30px !important;
+        }
+        .table100.ver1{
+          margin: 15px 5px !important;
         }
       }
       td img {
@@ -89,9 +95,9 @@
         .js-pscroll {
           margin-top: 30px;
         }
-      }
-      .table100.ver1 {
-        margin: 10px 40px;
+        .table100.ver1{
+          padding-bottom: 20px;
+        }
       }
       .head1 {
         text-align: center;
